crates/sm-diff/tests/snapshots/snapshots__identical.snap
---
source: crates/sm-diff/tests/snapshots.rs
expression: "script_snapshot(\"identical\", \"java\")"
---
case: identical

summary: 0 inserts, 0 deletes, 0 updates, 0 moves (0 reparent, 0 reorder)
(empty edit script)
